--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h1>我的专属音频</h1>
         <p>点击播放按钮收听我的音频内容。</p>
         <audio controls>
-            <source src="https://drive.google.com/file/d/1zJu141VLfqN1Pj6QZDwfI-XFs7gVseBZ/view?usp=sharing" type="audio/mpeg">
+            <source src="M500004FegdV1Re2yh.mp3">
             您的浏览器不支持音频播放。
         </audio>
         <p style="margin-top: 20px;">如果播放失败，请检查链接或浏览器兼容性。</p>
